--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="navbar">
     <div class="logo">Sophia & IT</div>
     <div class="lang-buttons">
-      <button onclick="setLang('zh')">中文</button>
-      <button onclick="setLang('en')">English</button>
+      <button onclick="setLang('zh')">English</button>
+      <button onclick="setLang('en')">中文</button>
       <button onclick="setLang('hy')">Հայերեն</button>
       <button onclick="setLang('ru')">Русский</button>
       <button onclick="setLang('ar')">العربية</button>
