--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- 联系表单 -->
     <div class="card" id="contactSection">
       <h3 id="contactTitle"></h3>
-      <form action="https://formspree.io/f/your-id" method="POST">
+      <form action="https://formspree.io/f/mwprpqke" method="POST">
         <label id="nameLabel"><input type="text" name="name" required></label>
         <label id="contactLabel"><input type="text" name="contact" required></label>
         <label id="messageLabel"><textarea name="message" rows="4" required></textarea></label>
