--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div class="hero">
     <h1 id="heroTitle">Sophia & IT</h1>
     <p id="heroSubtitle">Turning Ideas into Digital Reality.</p>
+    <p class="hero-subtext">Software Development | Web Solutions | IT Consulting</p>
     <a href="#contactSection" id="heroButton">Contact Us</a>
   </div>
 
