--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
       <button onclick="setLang('ar')">العربية</button>
     </div>
   </div>
-
-  <!-- 横幅 -->
-  <div class="hero">
-    <h1 id="heroTitle">Sophia & IT</h1>
-    <p id="heroSubtitle">Turning Ideas into Digital Reality.</p>
-    <p class="hero-subtext">Software Development | Web Solutions | IT Consulting</p>
+  
+    <!-- 横幅 -->
+<div class="hero">
+  <h1 id="heroTitle">Sophia & IT</h1>
+  <p id="heroSubtitle">Turning Ideas into Digital Reality.</p>
+  <p id="heroSubtext" class="hero-subtext"></p>
+  <a href="#contactSection" id="heroButton">Contact Us</a>
+</div>
+Software Development | Web Solutions | IT Consulting</p>
     <a href="#contactSection" id="heroButton">Contact Us</a>
   </div>
 
