--- a/index.html
+++ b/index.html
@@ -4,85 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sophia & IT</title>
+
+  <!-- Favicon（等你给我 logo，我会生成透明 PNG） -->
+  <link rel="icon" type="image/png" href="logo.png">
+
   <link rel="stylesheet" href="style.css">
-  <!-- Google Fonts -->
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- SEO Meta -->
-  <meta name="description" content="Sophia & IT - Turning Ideas into Digital Reality. 专业软件开发、网站建设、数据分析与IT咨询服务。">
-  <meta name="keywords" content="Sophia IT, 软件开发, 网站建设, 数据分析, IT咨询, 技术支持">
+
+  <!-- SEO -->
+  <meta name="description" content="Sophia & IT - Turning Ideas into Digital Reality. Software Development, Web Solutions, IT Support">
+  <meta name="keywords" content="Software Development, Web Design, IT Consulting, Data Analysis">
 </head>
+
 <body>
-  <!-- 导航栏 -->
-  <div class="navbar">
-    <div class="logo">Sophia & IT</div>
-    <div class="lang-buttons">
-      <button onclick="setLang('zh')">中文</button>
-      <button onclick="setLang('en')">English</button>
-      <button onclick="setLang('hy')">Հայերեն</button>
-      <button onclick="setLang('ru')">Русский</button>
-      <button onclick="setLang('ar')">العربية</button>
-    </div>
-  </div>
-  
-    <!-- 横幅 -->
-<div class="hero">
-  <h1 id="heroTitle">Sophia & IT</h1>
-  <p id="heroSubtitle">Turning Ideas into Digital Reality.</p>
-  <p id="heroSubtext" class="hero-subtext"></p>
-  <a href="#contactSection" id="heroButton">Contact Us</a>
-</div>
-Software Development | Web Solutions | IT Consulting</p>
-    <a href="#contactSection" id="heroButton">Contact Us</a>
-  </div>
 
-  <!-- 主体内容 -->
-  <div class="container">
-    <!-- 公司信息 -->
-    <div class="card">
-      <h3 id="infoTitle"></h3>
-      <p><b id="addressLabel"></b> <span id="address"></span></p>
-      <p><b id="emailLabel"></b> <a id="emailLink" href=""></a></p>
-      <p><b id="dateLabel"></b> <span id="date"></span></p>
-    </div>
-
-    <!-- 服务 -->
-    <div class="card">
-      <h3 id="servicesTitle"></h3>
-      <div class="services-grid" id="services"></div>
-    </div>
-
-    <!-- 联系表单 -->
-    <div class="card" id="contactSection">
-      <h3 id="contactTitle"></h3>
-      <form action="https://formspree.io/f/myznzpow" method="POST">
-        <label id="nameLabel">
-          Name:
-          <input type="text" name="name" required>
-        </label>
-        <label id="contactLabel">
-          Email:
-          <input type="email" name="email" required>
-        </label>
-        <label id="messageLabel">
-          Message:
-          <textarea name="message" rows="4" required></textarea>
-        </label>
-        <button type="submit" class="submit" id="sendBtn">Send</button>
-      </form>
-    </div>
-  </div>
-
-  <!-- 页脚 -->
-  <footer>
-    <p>© <span id="year"></span> Sophia & IT | Powered by GitHub Pages & Formspree</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- ======= 导航栏 ======= -->
+  <header class="navbar">
+    <div class="nav-left">
+      <img src="logo.png" clas
