--- a/index.html
+++ b/index.html
@@ -101,4 +101,8 @@
   </footer>
 
   <!-- Script -->
-  <script src="script.
+    <!-- Script -->
+  <script src="script.js"></script>
+</body>
+</html>
+
