--- a/index.html
+++ b/index.html
@@ -1,108 +1,180 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+/* =======================================
+   Sophia & IT — 蓝白科技企业风 Style
+   适配 Hero、Logo、导航、多语言、卡片
+   ======================================= */
 
-  <title>Sophia & IT</title>
+/* Global */
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background: #f4f7fc;
+  color: #1a1a1a;
+}
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+/* NAVBAR */
+.navbar {
+  width: 100%;
+  height: 70px;
+  background: white;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+.logo-area {
+  display: flex;
+  align-items: center;
+}
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/logo3.png" type="image/png">
+.logo-img {
+  height: 42px;
+  margin-right: 10px;
+}
 
-  <!-- SEO -->
-  <meta name="description" content="Sophia & IT - Turning Ideas into Digital Reality. 软件开发、网站建设、数据分析与IT咨询服务。">
-  <meta name="keywords" content="Sophia IT, 软件开发, 网站建设, 数据分析, IT咨询, 技术支持">
-</head>
+.logo-text {
+  font-size: 20px;
+  font-weight: 700;
+  color: #0056ff;
+}
 
-<body>
+.lang-buttons button {
+  padding: 6px 12px;
+  margin-left: 6px;
+  background: #e8f0ff;
+  border: 1px solid #b7d0ff;
+  color: #0056ff;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 13px;
+}
 
-  <!-- NAVIGATION -->
-  <div class="navbar">
-    <div class="logo-area">
-      <img src="assets/logo3.png" class="logo-img" alt="Sophia & IT Logo">
-      <span class="logo-text">Sophia & IT</span>
-    </div>
+.lang-buttons button:hover {
+  background: #d9e6ff;
+}
 
-    <div class="lang-buttons">
-      <button onclick="setLang('zh')">中文</button>
-      <button onclick="setLang('en')">English</button>
-      <button onclick="setLang('hy')">Հայերեն</button>
-      <button onclick="setLang('ru')">Русский</button>
-      <button onclick="setLang('ar')">العربية</button>
-    </div>
-  </div>
+/* HERO SECTION */
+.hero {
+  width: 100%;
+  height: 450px;
+  background: linear-gradient(135deg, #0056ff, #0a2d8f);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 70px; /* fix navbar */
+  text-align: center;
+  color: white;
+}
 
-  <!-- HERO -->
-  <header class="hero">
-    <div class="hero-content">
-      <img src="assets/logo3.png" class="hero-logo" alt="Main Logo">
+.hero-logo {
+  width: 110px;
+  margin-bottom: 15px;
+}
 
-      <h1 id="heroTitle">Sophia & IT</h1>
-      <p id="heroSubtitle">Turning Ideas into Digital Reality.</p>
+.hero-content h1 {
+  font-size: 42px;
+  margin: 10px 0;
+  font-weight: 700;
+}
 
-      <a href="#contactSection" id="heroButton" class="hero-btn">
-        Contact Us
-      </a>
-    </div>
-  </header>
+.hero-content p {
+  font-size: 20px;
+  opacity: 0.95;
+  margin-bottom: 25px;
+}
 
-  <!-- MAIN CONTENT -->
-  <main class="container">
+.hero-btn {
+  padding: 12px 26px;
+  background: #ffffff;
+  color: #0056ff;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 8px;
+  font-size: 18px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
 
-    <!-- INFO -->
-    <div class="card">
-      <h3 id="infoTitle"></h3>
-      <p><b id="addressLabel"></b> <span id="address"></span></p>
-      <p><b id="emailLabel"></b> <a id="emailLink"></a></p>
-      <p><b id="dateLabel"></b> <span id="date"></span></p>
-    </div>
+.hero-btn:hover {
+  background: #e9eeff;
+}
 
-    <!-- SERVICES -->
-    <div class="card">
-      <h3 id="servicesTitle"></h3>
-      <div class="services-grid" id="services"></div>
-    </div>
+/* MAIN CONTAINER */
+.container {
+  max-width: 950px;
+  margin: 50px auto;
+  padding: 20px;
+}
 
-    <!-- CONTACT FORM -->
-    <div class="card" id="contactSection">
-      <h3 id="contactTitle"></h3>
+/* CARDS */
+.card {
+  background: white;
+  border-radius: 12px;
+  padding: 25px;
+  margin-bottom: 30px;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+}
 
-      <form action="https://formspree.io/f/myznzpow" method="POST">
-        
-        <label id="nameLabel">
-          Name:
-          <input type="text" name="name" required>
-        </label>
+.card h3 {
+  font-size: 22px;
+  color: #003cb3;
+  margin-bottom: 15px;
+}
 
-        <label id="contactLabel">
-          Email:
-          <input type="email" name="email" required>
-        </label>
+/* SERVICES GRID */
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  gap: 18px;
+}
 
-        <label id="messageLabel">
-          Message:
-          <textarea name="message" rows="4" required></textarea>
-        </label>
+.service-box {
+  background: #f4f7ff;
+  border: 1px solid #cfdfff;
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  color: #003cb3;
+}
 
-        <button class="submit" id="sendBtn" type="submit">Send</button>
-      </form>
-    </div>
-  </main>
+/* FORM */
+form label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© <span id="year"></span> Sophia & IT | Powered by GitHub Pages & Formspree</p>
-  </footer>
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #bcd0ff;
+  border-radius: 6px;
+  margin-top: 6px;
+}
 
-  <!-- Script -->
-    <!-- Script -->
-  <script src="script.js"></script>
-</body>
-</html>
+.submit {
+  background: #0056ff;
+  color: white;
+  padding: 12px 22px;
+  border: none;
+  margin-top: 15px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 8px;
+}
 
+.submit:hover {
+  background: #003cb3;
+}
+
+/* FOOTER */
+footer {
+  text-align: center;
+  padding: 20px;
+  margin-top: 40px;
+  color: #555;
+}
