--- a/index.html
+++ b/index.html
@@ -4,115 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sophia & IT</title>
-
-    <!-- 样式 -->
     <link rel="stylesheet" href="style.css">
-
-    <!-- 字体 -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <!-- ====================== NAV 导航栏 ====================== -->
-    <header class="nav">
-        <div class="container nav-content">
 
-            <!-- LOGO -->
-            <div class="logo">
-                <img src="img/logo.png" alt="Sophia & IT Logo">
-            </div>
-
-            <!-- LANGUAGE BUTTONS -->
-            <div class="lang-switch">
-                <button class="lang-btn" data-lang="zh">中文</button>
-                <button class="lang-btn" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="hy">Հայ</button>
-                <button class="lang-btn" data-lang="ru">RU</button>
-                <button class="lang-btn" data-lang="ar">AR</button>
-            </div>
+    <!-- 导航栏 -->
+    <nav>
+        <div class="logo">
+            <!-- 修正后的 LOGO 路径 -->
+            <img src="logo3.png" alt="Logo">
+            <span>Sophia & IT</span>
         </div>
-    </header>
+        <ul class="nav-links">
+            <li><a href="#home">首页</a></li>
+            <li><a href="#services">服务项目</a></li>
+            <li><a href="#company">公司信息</a></li>
+            <li><a href="#contact">联系我们</a></li>
+        </ul>
+    </nav>
 
-
-    <!-- ====================== HERO 头图区 ====================== -->
-    <section class="hero">
-        <div class="container">
-            <h1 id="heroTitle">Sophia & IT</h1>
-            <p id="heroSubtitle">Turning Ideas into Digital Reality</p>
-            <button id="heroButton" class="cta-btn">Contact Us</button>
-        </div>
+    <!-- 主页 Section -->
+    <section id="home" class="hero">
+        <h1>欢迎来到 Sophia & IT</h1>
+        <p>为您的业务提供专业 IT 解决方案</p>
     </section>
 
-
-    <!-- ====================== 公司信息 ====================== -->
-    <section class="info">
-        <div class="container">
-            <h2 id="infoTitle">公司信息</h2>
-
-            <!-- 公司介绍段落由 script.js 动态注入 -->
-            <!-- <p id="companyDesc"></p> -->
-
-            <p><span id="addressLabel">地址：</span>
-                <span id="address">亚美尼亚 埃里温市...</span>
-            </p>
-
-            <p><span id="emailLabel">邮箱：</span>
-                <a id="emailLink" href="mailto:sophia.services.office@gmail.com">sophia.services.office@gmail.com</a>
-            </p>
-
-            <p><span id="dateLabel">日期：</span>
-                <span id="date"></span>
-            </p>
-        </div>
+    <!-- 服务项目 Section -->
+    <section id="services">
+        <h2>服务项目</h2>
+        <p>这里将放置公司的服务内容介绍...</p>
     </section>
 
-
-    <!-- ====================== 服务项目 ====================== -->
-    <section class="services">
-        <div class="container">
-            <h2 id="servicesTitle">我们的服务</h2>
-
-            <!-- 服务项目由 script.js 自动填充 -->
-            <div id="services" class="service-list"></div>
-        </div>
+    <!-- 公司信息 Section -->
+    <section id="company">
+        <h2>公司信息</h2>
+        <p>这里将展示您的公司简介...</p>
     </section>
 
-
-    <!-- ====================== 联系表单 ====================== -->
-    <section class="contact">
-        <div class="container">
-            <h2 id="contactTitle">联系我们</h2>
-
-            <form>
-                <label id="nameLabel">
-                    <span class="label-text">姓名：</span>
-                    <input type="text" placeholder="">
-                </label>
-
-                <label id="contactLabel">
-                    <span class="label-text">邮箱：</span>
-                    <input type="email" placeholder="">
-                </label>
-
-                <label id="messageLabel">
-                    <span class="label-text">留言：</span>
-                    <textarea placeholder=""></textarea>
-                </label>
-
-                <button type="submit" id="sendBtn">发送</button>
-            </form>
-        </div>
+    <!-- 联系方式 Section -->
+    <section id="contact">
+        <h2>联系我们</h2>
+        <p>Email: example@example.com</p>
     </section>
 
-
-    <!-- ====================== 页脚 ====================== -->
-    <footer class="footer">
-        <div class="container">
-            <p>© <span id="year"></span> Sophia & IT. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-    <!-- JS -->
     <script src="script.js"></script>
 </body>
 </html>
