--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- 导航栏 -->
     <nav>
         <div class="logo">
-            <!-- 修正后的 LOGO 路径 -->
             <img src="logo3.png" alt="Logo">
             <span>Sophia & IT</span>
         </div>
@@ -35,10 +34,24 @@
         <p>这里将放置公司的服务内容介绍...</p>
     </section>
 
-    <!-- 公司信息 Section -->
+    <!-- 公司信息 Section（已加入正式公司介绍） -->
     <section id="company">
         <h2>公司信息</h2>
-        <p>这里将展示您的公司简介...</p>
+
+        <p>
+            Sophia & IT 是一家专注于 AI 技术研发与企业数字化解决方案的创新型科技公司。
+            我们致力于通过智能化工具、自动化系统与定制化软件开发，帮助企业提升效率、降低成本、增强竞争力。
+        </p>
+
+        <p>
+            我们的核心业务包括：人工智能应用开发、数据分析平台构建、企业官网制作、
+            自动化工作系统部署、IT 顾问服务与技术培训。
+        </p>
+
+        <p>
+            作为一支专业团队，我们坚持“实用 · 高效 · 创新”的原则，为企业提供可落地、
+            可扩展、可长期维护的技术方案，让科技真正服务商业。
+        </p>
     </section>
 
     <!-- 联系方式 Section -->
